# sand_timer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
